--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.18",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.10",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^4.2.0"
   }
 }
